<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_CargaUnidad">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="#FFFDFD"
        android:gravity="center_vertical"
        android:text="       REGISTRO DE UNIDADES"
        android:background="@color/ic_launcher_background"
        android:textSize="28dp"/>

    <EditText
        android:id="@+id/txt_unidad"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_descripcion"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/txt_unidad_String"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_descripcion"
        android:layout_width="387dp"
        android:layout_height="222dp"
        android:layout_above="@+id/btn_guardaunidad"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/txt_descripcionu_String"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_guardaunidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginBottom="86dp"
        android:background="@color/ic_launcher_background"
        android:onClick="RegistrarUnidad"
        android:text="@string/btn_guardarunidad"
        android:textColor="@color/cardview_light_background" />

    <Button
        android:id="@+id/btn_ver_unidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginBottom="89dp"
        android:layout_toEndOf="@+id/btn_guardaunidad"
        android:layout_toRightOf="@+id/btn_guardaunidad"
        android:onClick="IrUnidades"
        android:text="@string/btn_verunidades"
        android:background="@color/ic_launcher_background"
        android:textColor="@color/cardview_light_background"/>
</RelativeLayout>