<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_Alumnos">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="#FFFDFD"
        android:gravity="center_vertical"
        android:text="       REGISTRO DE ALUMNOS"
        android:background="@color/ic_launcher_background"
        android:textSize="28dp"/>

    <EditText
        android:id="@+id/txt_dnialumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="210dp"
        android:ems="10"
        android:hint="@string/txt_dnialumno"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_surnamealumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_dnialumno"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/txt_surnamealumno"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_dnialumno"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_namealumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_surnamealumno"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/txt_namealumno"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_surnamealumno"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_regalumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="102dp"
        android:background="@color/ic_launcher_background"
        android:onClick="RegistrarAlumno"
        android:text="@string/btn_regalumno"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dnialumno"
        tools:text="@string/btn_regalumno" />

    <Button
        android:id="@+id/btn_consultalumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="102dp"
        android:layout_toEndOf="@+id/btn_regalumno"
        android:layout_toRightOf="@+id/btn_regalumno"
        android:background="@color/ic_launcher_background"
        android:onClick="irListaAlumnos"
        android:text="@string/btn_consultalumno"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintStart_toEndOf="@+id/btn_regalumno"
        app:layout_constraintTop_toBottomOf="@+id/txt_dnialumno"
        tools:text="@string/btn_consultalumno" />
</RelativeLayout>