<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/university2"
    tools:context=".MainActivity_Login">

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="193dp"
        android:layout_marginRight="193dp"
        android:layout_marginBottom="558dp"
        android:ems="10"
        android:hint="@string/txt_usuario_String"
        android:inputType="textPersonName"
        android:maxLength="70"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true"
        />

    <EditText
        android:id="@+id/txt_clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="193dp"
        android:layout_marginRight="193dp"
        android:layout_marginBottom="21dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:ems="10"
        android:hint="@string/txt_pass_String"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:errorEnabled="true"
        />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="657dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        app:srcCompat="@drawable/iconoirso" />



    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="313dp"
        android:layout_marginRight="313dp"
        android:layout_marginBottom="439dp"
        android:background="@color/ic_launcher_background"
        android:onClick="Ingresar"
        android:text="@string/btn_ingresar"
        android:textColor="@color/cardview_light_background" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="314dp"
        android:layout_marginRight="314dp"
        android:layout_marginBottom="369dp"
        android:background="@color/ic_launcher_background"
        android:onClick="IrRegistrar"
        android:text="@string/btn_registrar"
        android:textColor="@color/cardview_light_background" />

</RelativeLayout>